--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-jstree-table": "^0.0.24",
     "react-jvectormap": "0.0.16",
     "react-modal-video": "^1.2.8",
+    "react-qr-code": "^2.0.7",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
@@ -44,6 +45,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.1",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
