--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-jvectormap": "0.0.16",
     "react-modal-video": "^1.2.8",
     "react-qr-code": "^2.0.7",
-    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-reader": "2.2.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
