--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@yaireo/tagify": "^4.9.8",
+    "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "chartjs": "^0.3.24",
     "classnames": "^2.3.1",
     "export-from-json": "^1.4.1",
     "html-react-parser": "^1.2.8",
+    "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.4.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
